Se crea style.css y modifica index.html para avanza en el proyecto

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/asset/css/styles.css">
     <title>Este es un documento de prueba</title>
 </head>
 <body>
+    <h1>Este es un título H1 de prueba</h1>
+    <p>Este es un parrafo, con un elemento p que esta con color</p>
     
 </body>
 </html>
