Modificación en style.css e index.html agregando containers y creando estilos

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <title>Este es un documento de prueba</title>
 </head>
 <body>
-    <h1>Este es un título H1 de prueba</h1>
-    <p>Este es un parrafo, con un elemento p que esta con color</p>
-    
+    <div id="container">
+        <div id="post">
+            <h1>Este es el título atractivo e interesante del post</h1>
+            <p>Y este el parrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
+        </div>
+    </div>
 </body>
 </html>
