--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline"> Tu blog de confianza</span>
+            <span id="tagline"> Tu blog maestro</span>
         </div>
         <div id="post">
             <h1>Este es el título atractivo e interesante del post</h1>
             <p>Y este el parrafo de inicio donde vamos a explicar las cosas increíbles que se pueden hacer con ramas</p>
             <p>Este es un nuevo parrafo el cual no se que se debe colocar ya que me da lata verlo</p>
+            <p>Suscríbete y dale like</p>
         </div>
     </div>
 </body>
