--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/asset/css/styles.css">
-    <title>Este es un documento de prueba</title>
+    <title>Bienvenido a Hyperblog 2.0</title>
 </head>
 <body>
     <div id="container">
